--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -251,6 +251,7 @@ nav.abajo .main-name:hover {
     display: grid;
     grid-template-columns:
         repeat(auto-fit, minmax(min(420px, 100%), 1fr));
+    grid-auto-rows: 300px;
     gap: 2.2em;
 }
 
@@ -260,7 +261,8 @@ nav.abajo .main-name:hover {
     box-shadow: 7px 7px 4px rgba(34, 34, 34, 0.6);
     background-color: #f0f0f0;
     width: 100%;
-    max-height: 300px;
+    /* max-height: 300px; */
+    height: 100%;
     object-fit: cover;
     overflow: hidden;
 
@@ -293,6 +295,7 @@ nav.abajo .main-name:hover {
     display: grid;
     grid-template-columns:
         repeat(auto-fit, minmax(min(420px, 100%), 1fr));
+    grid-auto-rows: 300px;
     gap: 2.2em;
 }
 
@@ -302,7 +305,8 @@ nav.abajo .main-name:hover {
     box-shadow: 7px 7px 4px rgba(34, 34, 34, 0.6);
     background-color: #f0f0f0;
     width: 100%;
-    max-height: 300px;
+    /* max-height: 300px; */
+    height: 100%;
     object-fit: cover;
     overflow: hidden;
 
@@ -335,6 +339,7 @@ nav.abajo .main-name:hover {
     display: grid;
     grid-template-columns:
         repeat(auto-fit, minmax(min(420px, 100%), 1fr));
+    grid-auto-rows: 300px;
     gap: 2.2em;
 }
 
@@ -344,7 +349,8 @@ nav.abajo .main-name:hover {
     box-shadow: 7px 7px 4px rgba(34, 34, 34, 0.6);
     background-color: #f0f0f0;
     width: 100%;
-    max-height: 300px;
+    /* max-height: 300px; */
+    width: 100%;
     object-fit: cover;
     overflow: hidden;
 
@@ -378,6 +384,7 @@ nav.abajo .main-name:hover {
     display: grid;
     grid-template-columns:
         repeat(auto-fit, minmax(min(420px, 100%), 1fr));
+    grid-auto-rows: 300px;
     gap: 2.2em;
 }
 
@@ -387,7 +394,8 @@ nav.abajo .main-name:hover {
     box-shadow: 7px 7px 4px rgba(34, 34, 34, 0.6);
     background-color: #f0f0f0;
     width: 100%;
-    max-height: 300px;
+    /* max-height: 300px; */
+    width: 100%;
     object-fit: cover;
     overflow: hidden;
 
@@ -421,6 +429,7 @@ nav.abajo .main-name:hover {
     display: grid;
     grid-template-columns:
         repeat(auto-fit, minmax(min(420px, 100%), 1fr));
+    grid-auto-rows: 300px;
     gap: 2.2em;
 }
 
@@ -430,7 +439,8 @@ nav.abajo .main-name:hover {
     box-shadow: 7px 7px 4px rgba(34, 34, 34, 0.6);
     background-color: #f0f0f0;
     width: 100%;
-    max-height: 300px;
+    /* max-height: 300px; */
+    height: 100%;
     object-fit: cover;
     overflow: hidden;
 
@@ -463,6 +473,7 @@ nav.abajo .main-name:hover {
     display: grid;
     grid-template-columns:
         repeat(auto-fit, minmax(min(420px, 100%), 1fr));
+    grid-auto-rows: 300px;
     gap: 2.2em;
 }
 
@@ -472,7 +483,8 @@ nav.abajo .main-name:hover {
     box-shadow: 7px 7px 4px rgba(34, 34, 34, 0.6);
     background-color: #f0f0f0;
     width: 100%;
-    max-height: 300px;
+    /* max-height: 300px; */
+    height: 100%;
     object-fit: cover;
     overflow: hidden;
 
